Update swagger schema api documentation
