# users/views.py
@@ -5,7 +5,7 @@ from rest_framework.permissions import IsAuthenticated, AllowAny
 from django.contrib.auth import authenticate, login, logout
 from django.contrib.sessions.models import Session
 from django.middleware.csrf import get_token
-from drf_spectacular.utils import extend_schema
+from drf_spectacular.utils import extend_schema, OpenApiExample
 from .serializers import *
 from .models import CustomUser
 
@@ -35,6 +35,24 @@ class UserRegisterView(generics.CreateAPIView):
         400: MessageSerializer,
     },
     description="Authenticate a user and return a CSRF token",
+    examples=[
+        OpenApiExample(
+            "Successful Login",
+            summary="A successful login example",
+            description="Example of a successful login response",
+            value={"message": "Login successful", "csrf_token": "csrf-token-value"},
+            response_only=True,
+            status_codes=["200"],
+        ),
+        OpenApiExample(
+            "Invalid Credentials",
+            summary="An unsuccessful login example",
+            description="Example of an unsuccessful login response due to invalid credentials",
+            value={"error": "Invalid Credentials"},
+            response_only=True,
+            status_codes=["400"],
+        ),
+    ],
 )
 class UserLoginView(APIView):
     permission_classes = [AllowAny]
@@ -57,6 +75,36 @@ class UserLoginView(APIView):
             status=status.HTTP_400_BAD_REQUEST,
         )
 
+    @extend_schema(
+        responses={
+            200: CustomUserSerializer,
+            400: MessageSerializer,
+        },
+        description="Get the authenticated user's details",
+        examples=[
+            OpenApiExample(
+                "Authenticated User",
+                summary="Example of a successful response with authenticated user data",
+                description="Returns the details of the authenticated user",
+                value={
+                    "email": "user@example.com",
+                    "first_name": "John",
+                    "last_name": "Doe",
+                    "events_joined": ["list of events the user has join"],
+                },
+                response_only=True,
+                status_codes=["200"],
+            ),
+            OpenApiExample(
+                "Unauthenticated User",
+                summary="Example of an unauthenticated response",
+                description="Returns an error message when the user is not authenticated",
+                value={"error": "User is not authenticated"},
+                response_only=True,
+                status_codes=["400"],
+            ),
+        ],
+    )
     def get(self, request, *args, **kwargs):
         if request.user.is_authenticated:
             user = request.user
